# FMToolsV2

./: .gitignore  README.md  README_bg.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_es.md  README_et.md  README_fi.md  README_fr.md  README_ga.md  README_hr.md  README_hu.md  README_it.md  README_ko.md  README_lt.md  README_lv.md  README_mt.md  README_nl.md  README_pl.md  README_pt.md  README_ro.md  README_sk.md  README_sl.md  README_sv.md  README_zh.md  package.json  setup_instructions.md  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
scripts/: compress_images.ps1  generate_readmes.cjs  propagate_all_keys.cjs  update_locales.cjs  update_locales_smart.cjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/lib/components/: Navbar.svelte  StarRating.svelte  Tooltip.svelte
src/lib/i18n/: i18n.ts
src/lib/i18n/locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  ko.json  lt.json  lv.json  mt.json  nl.json  pl.json  pt.json  ro.json  sk.json  sl.json  sv.json  zh.json
src/lib/logic/: hidden-notes.ts  infrastructure-data.ts  reports-data.ts  staff-evaluation.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/hidden-notes/: +page.svelte
src/routes/infrastructure/: +page.svelte
src/routes/reports/: +page.svelte
src/routes/staff-evaluation/: +page.svelte
