[package]
name = "fmtools"
version = "1.0.0"
description = "Outils d'évaluation pour Football Manager"
authors = ["FMTools Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34.7"
specta = { version = "=2.0.0-rc.20", features = [] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["javascript", "typescript"] }


